RESOLVED FIXED206197
Scrollbar hiding on iOS via ::-webkit-scrollbar { display: none } doesn't work
https://bugs.webkit.org/show_bug.cgi?id=206197
Summary Scrollbar hiding on iOS via ::-webkit-scrollbar { display: none } doesn't work
Simon Fraser (smfr)
Reported 2020-01-13 14:42:23 PST
Scrollbar hiding on iOS via ::-webkit-scrollbar { display: none } doens't work
Attachments
Patch (4.24 KB, patch)
2020-01-13 14:43 PST, Simon Fraser (smfr)
no flags
Patch (4.24 KB, patch)
2020-01-13 14:45 PST, Simon Fraser (smfr)
no flags
Simon Fraser (smfr)
Comment 1 2020-01-13 14:43:58 PST
Simon Fraser (smfr)
Comment 2 2020-01-13 14:45:01 PST
Simon Fraser (smfr)
Comment 3 2020-01-13 14:45:24 PST
WebKit Commit Bot
Comment 4 2020-01-13 21:40:55 PST
Comment on attachment 387569 [details] Patch Clearing flags on attachment: 387569 Committed r254492: <https://trac.webkit.org/changeset/254492>
WebKit Commit Bot
Comment 5 2020-01-13 21:40:57 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.