Cherry-pick r254492. rdar://problem/58037745

Scrollbar hiding on iOS via ::-webkit-scrollbar { display: none } doesn't work
    https://bugs.webkit.org/show_bug.cgi?id=206197

    Reviewed by Tim Horton.
    Source/WebCore:

    The logic added in r251369 was reversed, causing scrollbar hiding to not work correctly.

    Tested by fast/scrolling/ios/scrollbar-hiding.html

    * rendering/RenderScrollbar.cpp:
    (WebCore::RenderScrollbar::isHiddenByStyle const):

    LayoutTests:

    The logic added in r251369 was reversed, causing scrollbar hiding to not work correctly.

    * fast/scrolling/ios/scrollbar-hiding-expected.txt:

    Canonical link: https://commits.webkit.org/219307@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@254492 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/219244.14@safari-610.1.1-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-610.1.1-branch@255277 268f45cc-cd09-0410-ab3c-d52691b4dbfc